--- a/src/HeavyService.Persistance/HeavyService.Persistance.csproj
+++ b/src/HeavyService.Persistance/HeavyService.Persistance.csproj
@@ -10,4 +10,11 @@
     <ProjectReference Include="..\HeavyService.DataAccess\HeavyService.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos\" />
+    <Folder Include="Attributes\" />
+    <Folder Include="Filters\" />
+    <Folder Include="Validations\" />
+  </ItemGroup>
+
 </Project>
