--- a/src/HeavyService.Service/HeavyService.Service.csproj
+++ b/src/HeavyService.Service/HeavyService.Service.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\HeavyService.Persistance\HeavyService.Persistance.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="hubs\" />
+    <Folder Include="Healpers\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
