--- a/src/HeavyService.DataAccess/HeavyService.DataAccess.csproj
+++ b/src/HeavyService.DataAccess/HeavyService.DataAccess.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.143" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Npgsql" Version="7.0.4" />
   </ItemGroup>
 
