--- a/src/HeavyService.DataAccess/HeavyService.DataAccess.csproj
+++ b/src/HeavyService.DataAccess/HeavyService.DataAccess.csproj
@@ -20,7 +20,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Dapper" Version="2.0.143" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
     <PackageReference Include="Npgsql" Version="7.0.4" />
   </ItemGroup>
 
