Create Auth Controller

--- a/HeavyService.WebApi/appsettings.Development.json
+++ b/HeavyService.WebApi/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Email": {
+    "SenderEmail": "dotnetdev701@gmail.com",
+    "Platform": "smtp.gmail.com",
+    "Port": "587",
+    "Password": "wcjlbcwfwornmbtk"
+  },
+  "Jwt": {
+    "Issuer": "http://heavyservice.uz",
+    "Audience": "Heavy Service",
+    "SecurityKey": "23f926fb-dcd2-49f4-8fe2-992aac18f08f",
+    "Lifetime": 72
   }
 }
