Create Auth and Instrument Validator Test

--- a/test/HeavyService.UnitTest/HeavyService.UnitTest.csproj
+++ b/test/HeavyService.UnitTest/HeavyService.UnitTest.csproj
@@ -25,4 +25,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\HeavyService.Persistance\HeavyService.Persistance.csproj" />
+  </ItemGroup>
+
 </Project>
