--- a/src/HeavyService.WebApi/HeavyService.WebApi.csproj
+++ b/src/HeavyService.WebApi/HeavyService.WebApi.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\HeavyService.Service\HeavyService.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\media\images\" />
+  </ItemGroup>
+
 </Project>
