--- a/src/HeavyService.DataAccess/HeavyService.DataAccess.csproj
+++ b/src/HeavyService.DataAccess/HeavyService.DataAccess.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Handlers\**" />
+    <EmbeddedResource Remove="Handlers\**" />
+    <None Remove="Handlers\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HeavyService.Application\HeavyService.Application.csproj" />
   </ItemGroup>
 
@@ -16,7 +22,6 @@
     <Folder Include="Interfaces\Transports\" />
     <Folder Include="Interfaces\TransportComments\" />
     <Folder Include="Interfaces\Roles\" />
-    <Folder Include="Handlers\" />
   </ItemGroup>
 
   <ItemGroup>
